qc pass: p4lang: polka
qc pass: p4lang: vlan polka
---------------------------------- 2021-11-06 08:26:03
no todo: consider bgp neigh recursive-nexthop knob with proper limiters
qc pass: bgp without recursion
qc pass: bgp with recursion
---------------------------------- 2021-11-08 04:21:51
no todo: interactive switch for traceroute to mimic mtr with class util.dampening, similar to mtr - display traceroute with the same parameters or so
---------------------------------- 2021-11-08 10:43:58
qc pass: bgp with route flap dampening
---------------------------------- 2021-11-08 16:39:31
qc pass: isis default address suppression
qc pass: integrated isis default address suppression
qc pass: isis address unsuppression
qc pass: integrated isis address unsuppression
qc pass: ospf default address suppression
qc pass: ospf address unsuppression
---------------------------------- 2021-11-08 18:16:21
qc pass: babel default address suppression
qc pass: babel address unsuppression
qc pass: eigrp default address suppression
qc pass: eigrp address unsuppression
qc pass: olsr default address suppression
qc pass: olsr address unsuppression
qc pass: rip default address suppression
qc pass: rip address unsuppression
---------------------------------- 2021-11-09 09:49:46
no todo: ttl handling follow the selected forwarder, reconfigurable if more
no todo: interface name tabbing
no todo: vdc name tabbing
no todo: interface range command
no todo: temper: web access log
no todo: terminal mode resolve
no todo: http host upload optional different authentication
todo: name tabbing
---------------------------------- 2021-11-09 10:32:58
no todo: hostwatch to execute script on acl match
---------------------------------- 2021-11-10 08:40:06
qc pass: ospf maximum metric
---------------------------------- 2021-11-13 12:01:04
no todo: int eth1/int eth2
no todo: name tabbing
---------------------------------- 2021-11-14 04:54:30
no todo: preallocate qos buffers