@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.11.20-cur, done by cs@nop.<br/>
-tested: 2021-11-20 06:16:42, took 00:06:15, with 100 workers, on 2448 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2021-11-20 07:31:49, took 00:05:55, with 100 workers, on 2450 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2448,6 +2448,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static09.tst">rout-static09.tst</a></td><td>success</td><td>recursive static routing</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static10.tst">rout-static10.tst</a></td><td>success</td><td>recursive static routing with labels</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-static11.tst">rout-static11.tst</a></td><td>success</td><td>static routing with ecmp</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/serv-bmp01.tst">serv-bmp01.tst</a></td><td>success</td><td>static bmp peer</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/serv-bmp02.tst">serv-bmp02.tst</a></td><td>success</td><td>dynamic bmp peer</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-dns01.tst">serv-dns01.tst</a></td><td>success</td><td>authoritative dns server</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-dns02.tst">serv-dns02.tst</a></td><td>success</td><td>recursive dns server</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/serv-dns03.tst">serv-dns03.tst</a></td><td>success</td><td>relaying dns server</td></tr>
