@@ -12455,3 +12455,6 @@ no todo: int eth1/int eth2
 no todo: name tabbing
 ---------------------------------- 2021-11-14 04:54:30
 no todo: preallocate qos buffers
+---------------------------------- 2021-11-20 07:25:54
+qc pass: static bmp peer
+qc pass: dynamic bmp peer
